added more pseudo classes, added additional "biodiversity" section. finally added opening section image along with respective resource folder.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#causes">Causes</a></li>
                 <li><a href="#effects">Effects</a></li>
+                <li><a href="#biodiversity">Biodiversity</a></li>
                 <li><a href="#solutions">Solutions</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -23,6 +24,7 @@
     <main>
         <section id="home" class="section">
             <h1>Welcome to Climate Change Awareness</h1>
+            <img src="resources/img.png" alt="Climate Awareness Image" class="section-image">
             <p>
                 Welcome to Climate Change Awareness, a platform dedicated to understanding and addressing one of the most urgent challenges facing our world today.
                 Climate change, driven by human activities such as deforestation and fossil fuel consumption, is causing profound shifts in weather patterns, rising sea levels, and loss of biodiversity.
@@ -51,6 +53,17 @@
                 Warmer temperatures also contribute to more frequent and intense heatwaves, droughts, and wildfires, which disrupt ecosystems and harm human health.
                 Additionally, changing weather patterns are resulting in more powerful storms and unpredictable rainfall, leading to flooding in some regions and water scarcity in others.
                 These impacts not only endanger wildlife and natural habitats but also pose significant risks to economies, food security, and livelihoods around the world.
+            </p>
+        </section>
+        <section id="biodiversity" class="section">
+            <h2>Impact on Biodiversity</h2>
+            <p>
+                Climate change poses a serious threat to biodiversity across the globe. Rising temperatures, changing weather patterns, and habitat loss disrupt ecosystems, making it challenging for many species to survive.
+                As ecosystems become unbalanced, some species struggle to adapt quickly enough, leading to declines in population or even extinction.
+                Changes in seasonal behaviors, like blooming and migration, are affecting the delicate relationships between plants, animals, and their habitats.
+                Additionally, climate change exacerbates other pressures like pollution and habitat destruction, creating a hostile environment for countless species.
+                Protecting biodiversity is essential for maintaining healthy ecosystems that support life on Earth, including human life.
+                Through conservation efforts, sustainable practices, and mitigating climate change impacts, we can work towards preserving the rich diversity of life on our planet.
             </p>
         </section>
 
